examples/semantics/errors/error12.grace
fun error12 () : nothing
	fun foo(): int
		var arr :int[10];
	{
		return arr[0];
	}
{
	foo();
}
